syntax = "proto3";

package example.user;

message MyRequest {
  string name = 1;
  int32 age = 2;
}

message Book {
  string title = 1;
  string author = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  repeated Book books = 3;
}

service UserService {
  rpc CreateUser (MyRequest) returns (User) {}
}
